--- a/styles/themes.css
+++ b/styles/themes.css
@@ -33,7 +33,7 @@
   --bg-svg: #f00;
   --bg-image: repeating-linear-gradient(to right, #000 0px 2px, transparent 2px 4px),
     repeating-linear-gradient(#000 0px 2px, transparent 2px 4px),
-    linear-gradient(#007f0c, #007f0c);
+    linear-gradient(#007f0c, #004306);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -50,6 +50,6 @@
     --bg-svg: #f00;
     --bg-image: repeating-linear-gradient(to right, #000 0px 2px, transparent 2px 4px),
     repeating-linear-gradient(#000 0px 2px, transparent 2px 4px),
-    linear-gradient(#007f0c, #007f0c);
+    linear-gradient(#007f0c, #004306);
   }
 }
